--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,18 @@
-html, body, #map {
+/*html, body, #map {
     height: 100%;
     padding: 0;
-    margin: 10;
-  }
+    margin: 0;
+  }*/
+
+  html,body,#mapDiv,.map.container{
+  padding:0;
+  margin:0;
+  height:100%;
+}
+#legendDiv{
+  background-color: #fff;
+  position: absolute !important;
+  z-index: 99;
+  top:10px;
+  right:20px;
+}
