--- a/styles/style.css
+++ b/styles/style.css
@@ -16,3 +16,20 @@
   top:10px;
   right:20px;
 }
+
+html,
+  body,
+  #map {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  #search {
+    display: block;
+    position: absolute;
+    z-index: 3;
+    top: 20px;
+    left: 75px;
+  }
+
